@@ -27,6 +27,18 @@ $TCA['tx_comments_comments'] = array(
 				'minsize' => 1,
 				'maxsize' => 1,
 				'size' => 1,
+				'wizards' => Array(
+					'_PADDING' => 1,
+					'_VERTICAL' => 1,
+					'edit' => Array(
+						'type' => 'popup',
+						'title' => 'LLL:EXT:comments/locallang_db.xml:tx_comments_comments.external_ref.wizard',
+						'script' => 'wizard_edit.php',
+						'popup_onlyOpenIfSelected' => 1,
+						'icon' => 'edit2.gif',
+						'JSopenParams' => 'height=350,width=580,status=0,menubar=0,scrollbars=1',
+					),
+				),
 			),
 		),
 		'external_prefix' => array(
