@@ -2,6 +2,7 @@
 
 	* Added length to mysql index because some mysql versions refused to use TEXT column without length
 	* Changed default sorting direction to show last comments first
+	* Added wizard to edit associated entry inside comment record
 
 2007-11-18 Dmitry Dulepov  <dmitry@typo3.org>
 
